--- a/index_eng.html
+++ b/index_eng.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,7 +39,7 @@
                 <div class="dropdown">
                     <img src="./svg/language.svg" alt="language.css" class="svg">&nbsp;Language
                     <div class="dropdown-content">
-                        <a href="./index_eng.html">English</a>
+                        <a href="./index.html">한국어</a>
                         <a href="./index_jap.html">日本語</a>
                     </div>
                 </div>
@@ -58,41 +58,36 @@
 </nav>
 <main>
     <p>
-        종합 개발 프로젝트 팀 <b>베인</b><br>
-        시대의 바람에 돌아가는 <b>바람개비(날개)</b>
+        Comprehensive Development Project Team <b>Vane</b><br>
+        A <b>vane</b> that turns in the wind of the times
     </p>
 
     <ul id="role">
         <li>
             <a href="https://github.com/VaneProject/.github/blob/main/VANE_TEAM_RULE.md">
-                <img src="./svg/vane_role.svg" alt="vane role" class="svg">&nbsp;베인 규칙
+                <img src="./svg/vane_role.svg" alt="vane role" class="svg">&nbsp;Vane Rule
             </a>
         </li>
         <li>
             <a href="https://github.com/VaneProject/.github/blob/main/CODE_OF_CONDUCT.md">
-                <img src="./svg/conduct.svg" alt="conduct" class="svg">&nbsp;행동 강령
+                <img src="./svg/conduct.svg" alt="conduct" class="svg">&nbsp;Code Of Conduct
             </a>
         </li>
         <li>
             <a href="https://github.com/VaneProject/.github/blob/main/SECURITY.md">
-                <img src="./svg/security.svg" alt="security" class="svg">&nbsp;보안
+                <img src="./svg/security.svg" alt="security" class="svg">&nbsp;Security
             </a>
         </li>
     </ul>
 
     <hr>
-    <h3>웹</h3>
-    <link rel="stylesheet" href="./style/web_link.css">
-    <a href="./web/decimal_conversion.html" class="web_link">진법변환</a>
-
-    <h3>라이브러리</h3>
-
-    <h3>게임</h3>
-
-    <h3>애플리케이션</h3>
+    <h3>Web</h3>
+    <h3>Library</h3>
+    <h3>Game</h3>
+    <h3>Application</h3>
 
     <hr>
-    <h3>멤버</h3>
+    <h3>Member</h3>
     <table id="developer_table"></table>
 </main>
 </body>
