--- a/index_jap.html
+++ b/index_jap.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,8 +39,8 @@
                 <div class="dropdown">
                     <img src="./svg/language.svg" alt="language.css" class="svg">&nbsp;Language
                     <div class="dropdown-content">
+                        <a href="./index.html">한국어</a>
                         <a href="./index_eng.html">English</a>
-                        <a href="./index_jap.html">日本語</a>
                     </div>
                 </div>
             </li>
@@ -82,14 +82,9 @@
 
     <hr>
     <h3>웹</h3>
-    <link rel="stylesheet" href="./style/web_link.css">
-    <a href="./web/decimal_conversion.html" class="web_link">진법변환</a>
-
     <h3>라이브러리</h3>
-
     <h3>게임</h3>
-
-    <h3>애플리케이션</h3>
+    <h3>어플리케이션</h3>
 
     <hr>
     <h3>멤버</h3>
