--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <link rel="stylesheet" href="style/language.css">
     <link rel="stylesheet" href="style/application.css">
     <link rel="stylesheet" href="style/library.css">
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap">
 
     <script type="module" src="bootstrap/popper.min.js"></script>
     <script type="module" src="bootstrap/bootstrap.min.js"></script>
