--- a/index_eng.html
+++ b/index_eng.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/language.css">
 
-    <script type="module" src="script/main_action.js"></script>
     <script type="module" src="script/menu.js"></script>
 </head>
 <body>
@@ -82,7 +81,7 @@
 
     <hr>
     <h3>Web</h3>
-    <h3>Library</h3>
+    <h3>Library_run</h3>
     <h3>Game</h3>
     <h3>Application</h3>
 
