--- a/web/decimal_conversion.html
+++ b/web/decimal_conversion.html
@@ -34,7 +34,7 @@
     <p>결과 <input type="text" id="result"></p>
 
     <button id="copy">복사</button>
-    <script type="module" src="../script/decimal_conversion.js"></script>
+    <script type="module" src="style/decimal_conversion.js"></script>
 </main>
 </body>
 </html>
