--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
     <script type="module" src="script/library/library_run.js"></script>
     <script type="module" src="script/application/application_run.js"></script>
+
+    <script type="module" src="language/ConverterLanguage.js"></script>
 </head>
 <body>
 <header>
@@ -78,7 +80,8 @@
     <ul id="role">
         <li>
             <a href="https://github.com/VaneProject/.github/blob/main/VANE_TEAM_RULE.md">
-                <img src="./svg/vane_role.svg" alt="vane role" class="svg">&nbsp;베인 규칙
+                <img src="./svg/vane_role.svg" alt="vane role" class="svg">
+                &nbsp;베인 규칙
             </a>
         </li>
         <li>
